Fixed z-index Shenanigans
Tab list should properly appear above most elements but remain below the titlebar.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -560,7 +560,8 @@ pre {
         position: fixed;
         box-shadow: 0 0 10px 10px var(--color-dark);
         background-color: var(--color-dark);
-        // z-index: 9; // Was there a reason for this? added randomly in e939c35c10dae2fb12ffda8e01de0e498e439c33
+        z-index: 1; // Was there a reason for this? added randomly in e939c35c10dae2fb12ffda8e01de0e498e439c33
+        // yes it was added to stop random ui elements from overlapping the tab list
 
         li {
             font-weight: bold;
@@ -1190,7 +1191,7 @@ button {
     background-color: black;
     width: 100%;
     height: 100%;
-    z-index: 12;
+    z-index: 20;
     display: flex;
     justify-content: center;
     align-items: center;
